# notes

.obsidian/: app.json  appearance.json  graph.json  hotkeys.json  workspace.json
c++/: 38.Formal definition of values.md  38.Move semantics.md  41.Move and forward implementation.md  42.Expired values. Copy elision. Return value optimization.md  43.Auto type, decltype.md  44.Deducing this, CTAD, Structured bindings, tuples.md  auto_type_examples.cpp  compilation.md  ctad.cpp  decltype_examples.cpp  expired_values_example.cpp  forward_and_move_implementation.cpp  make_tuple_example.cpp  move_constructor.cpp  move_function.cpp  move_implementation.cpp  optional.cpp  overloading_example.cpp  preprocessor  preprocessor.cpp  string_move_example.cpp  tuple.cpp  vector.cpp
cmake/03-library/: CMakeLists.txt  README.md  compile_commands.json  hello.cpp  hello.hpp  main.cpp
cs162/: Four Fundamental OS Concepts.md  Four Fundamentsl OS Concepts.md  Operating Systems.md  Threads and Processes.md  What is an Operating System.md
docker/: README.md
go-academy/: week-11-seminar.md  week-12-seminar.md  week-13-seminar.md  week-14-lecture.md  week-14-seminar.md  week-15-seminar.md  week-2-lecture.md  week-4-seminar.md  week-5-lecture.md  week-5-seminar.md  week-6-seminar.md  week-7-seminar.md  week-9-seminar.md
go-general/: general-question.md
linux-inside/: linux-organization.md
other_notes/: Header files.md  chvk_differential_21.10.md  git.md  go-servers.md  iterated-function-systems.tex  server_documentation.md  sql.md  tcp, ip.md  userver.md
react/: 01-introduction.md  (+5 more)
(+248 files in other folders)
